--- a/app/assets/stylesheets/activeadmin_materialize_theme/variables.scss
+++ b/app/assets/stylesheets/activeadmin_materialize_theme/variables.scss
@@ -4,6 +4,7 @@ $admin-bg-color: #f4f4f4;
 
 $header-bg-color: $primary-color;
 $header-fg-color: #fff;
+$header-dropdown-active: #eee;
 
 $titlebar-bg-color: lighten($primary-color, 10%);
 $titlebar-fg-color: #9ab;
